# rust-test

./: .editorconfig  .env  .env.development  .gitignore  .stylua.toml  Cargo.toml  README.md  arch-install-step.txt  commit.sh  docker-compose.dev.yml  package-lock.json  package.json  rustfmt.toml  token
.sqlx/: query-0ae5f4c3334b5b918d88babd52086b19638a8855c48611f7a5527f876816069d.json  query-1aedcf640fe5545473a95d2654d820ba33fd695659a94591d7b7f90ce6a5d31c.json  query-1bfdb93bc4d19dc76368d1c99533b717c3f976996c7f2e6250a044e7d2d59c68.json  query-2803e280702f95d2543222fcdcb6bb282669bbd16dcb963f66bf483ab82a83fe.json  query-2853a10b2fa68f6f618db0624b9b35628fba6e1455deff0351bb3996543f0853.json  query-2a30e8ef49fea5d1543b90cd4a5154ad73d9484a99583379c489c4f1a61a4164.json  query-35c43588680c16da246d4d85447e39991d3e42d6291558528f8998e1bed157fd.json  query-3dd5e4c379d0d60ab4a441eb88ac2365cb2e02118982d8c13975809586d05332.json  query-4c4ed8eb1273a0e2748f8ac3ae926cce93d8c8d10fbc545145e32a70f7e9f14e.json  query-5673c9f321572fbc01af0dbf1ad8947f3f595261e42560d91487174e8f81e720.json  query-5d889d043415bfd12902617d52737fc8ab613166319de794b67e33a11f3d0afc.json  query-5f39b83f49eb3608808679edd05da574b312b51a3d5ac901a261872bfc2ba4ae.json  query-604ada84257bf2cb06070328bdcf259cae6e0656626581c0df946f9264f7b227.json  query-660a0cb2a8cef683f7363839f7a71ee622bf743c17bf025d87bdcf889793d60d.json  query-6bd81cdbd915fb3fa12c83a2c95d92c4a3ae335d021698034d3de0deb06d1361.json  query-750c273452a37598fb0076d3e51ba883283275c7b60a8a2b45c26e05443f715e.json  query-8101a51248adb445def9088cdc9565ac2d40ccb8233d668220c045c1b481046f.json  query-8631e04879bac12205883375c681391e3f66e005c3d9de02547aa19552a7f09e.json  query-8b15e9faddd34f14f7260a706da84b7289799a5309bbfccd1bdc258733852680.json  query-8db646ab3729573180e7a6c27bf23f5cf76d9691f0373bd381ae8278eb5251aa.json  query-9eb572ab392855acba0c5fbf79d35dcbbf6651d472fe210d13ceac44de6b3012.json  query-a2c4cb6ba37e0e73a9fea8ca7fbd3cc2a9476598e052c7e865712ee2623a558c.json  (+10 more)
database/: Cargo.toml
database/sql/: category-delete.sql  ledger-get-by-id.sql  order-count.sql  order-detail-insert.sql  order-get-by-id.sql  product-get-all-by-supplier.sql  product-get-all.sql  product-insert.sql  relation-get-all.sql
database/src/: account.rs  category.rs  ledger.rs  lib.rs  model.rs  product.rs
frontend/: .editorconfig  .gitignore  (+9 more)
resdb/: .editorconfig  Cargo.toml
resdb/sql/: account-delete.sql  account-get-all.sql  account-insert.sql  account-update.sql  category-get-all.sql  category-insert.sql  category-update.sql  gudang-delete.sql  gudang-get-all-order-by-id.sql  gudang-get-all-order-by-name.sql  gudang-get-by-id.sql  gudang-insert.sql  gudang-update.sql  gudang-with-product.sql  ledger-get-by-id.sql  ledger-update.sql  order-detail-delete.sql  order-detail-get-by-order-2.sql  order-detail-get-by-order.sql  order-detail-insert.sql  order-detail-update.sql  order-get-all-by-customer.sql  order-get-all-by-sales.sql  order-get-all-by-search.sql  order-get-by-id-2.sql  order-insert.sql  order-update.sql  product-get-all-2.sql  product-get-all-3.sql  product-get-all-4.sql  product-get-all-by-category.sql  product-get-all-by-supplier.sql  product-get-all.sql  product-get-by-barcode.sql  product-get-by-id.sql  product-get-by-name.sql  product-insert.sql  product-update-stock.sql  product-update.sql  relation-delete.sql  (+17 more)
resdb/sql/ledger/: delete.sql  update.sql
resdb/sql/ledger/details/: insert.sql
resdb/sql/order/: count-by-customer.sql  count-by-sales.sql  count.sql  sum-payment.sql  update.sql
resdb/sql/product/: count-all.sql  count-by-category.sql  delete.sql  get-all-2.sql  get-all-3.sql  get-all-4.sql  get-all-by-category.sql  get-all.sql  get-barcode.sql  get-barcodes.sql  get-by-id.sql  get-by-name.sql  get-by-search.sql  get-origin-by-id.sql  get-special.sql  insert.sql  product-get-all-by-supplier (Copy 1).sql  product-get-by-barcode.sql  update-stock.sql  update.sql
resdb/sql/region/: delete.sql  get-all.sql  get-by-id.sql  insert.sql  update.sql
resdb/sql/warehouse/: delete.sql  get-all-order-by-id.sql  get-all-order-by-name.sql  get-by-id.sql  insert.sql  update.sql  with-product.sql
resdb/src/: .product.rs.swp  account.rs  category.rs  db.rs  gudang.rs  ledger.rs  lib.rs  model.rs  order.rs  order_payment.rs  product.rs  region.rs  relation.rs  stock.rs  user.rs  warehouse.rs
(+188 files in other folders)
