[package]
name = "complete-restful-api-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.3.1"
argon2 = "0.5.1"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3.28"
jsonwebtoken = "9.2.0"
openssl-probe = "0.1.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.104", features = ["raw_value"]}
sqlx = { version = "0.7.1", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid", "bigdecimal"] }
utoipa = { version = "4.1.0", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "4.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "4.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
# serde_with = "3.8.1"

# rust_decimal = {version = "1.35", features = ["db-postgres"] }
# rust_decimal_macros = "1.34.2"

