[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# opt-level = 's'  # Optimize for size.
# lto = true # Link Time Optimization (LTO)

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
# sqlx = { version = "0.7.1", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid", "bigdecimal"] }
serde_json = { version = "1.0.104", features = ["raw_value"]}
bigdecimal = { version = "0.3.0", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
sqlx = { version = "0.7.1", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid", "bigdecimal"] }
