[package]
name = "resdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# opt-level = 's'  # Optimize for size.
# lto = true # Link Time Optimization (LTO)

[dependencies]
async-trait = "0.1.83"

chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["raw_value"]}
validator = { version = "0.18.1", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.2", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid", "bigdecimal"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
